--- a/01_Values_Types_and_Operators/newhtml.html
+++ b/01_Values_Types_and_Operators/newhtml.html
@@ -11,6 +11,12 @@
 <div>Variables, Types and Operators</div>
 
 <script>
-  console.log(log);
+  var total = 0;
+  var count = 1;
+  while (count <= 10) {
+    total += count;
+    count++;
+  }
+  console.log(total); // 55
 </script>
 </html>
