--- a/01_Values_Types_and_Operators/01_12.12.2019.html
+++ b/01_Values_Types_and_Operators/01_12.12.2019.html
@@ -12,58 +12,52 @@
 
     <h1>01 Values Types and Operators</h1>
 
+    <ol>
+        <li>Numbers</li>
+    </ol>
+
     <script>
 
+        // let total = 0, count = 1;
+        // while (count <= 10) {
+        //     total += count;
+        //     count++;
+        // }
+        // console.log(total);
+
+
         function factorial(n) {
-            if (n === 0) {
+            if (n == 0) {
                 return 1;
             } else {
-                return factorial(n -1) * n;
+                return factorial(n - 1) * n;
             }
         }
         console.log(factorial(8));
 
-        console.log("This is the first line\nAnd this is the second");
+        /// NUMBERS ///
 
-        console.log("A newline character is written like this \"\\n\".");
+            // Special Numbers:
 
-        // Template Literal `${}`
-        console.log(`half of 100 is ${100 / 2}`);
+                //  infinity
+                //  - infinity
+                //  NaN , "not a number". e.g.: (0 /0, infinity - infinity)
 
-        // Unary Operators typeof
-        console.log(typeof 4.5);
-        console.log(typeof "x");
 
-        // Booleans
-        console.log("Aardvark" < "Zoroaster");
-        console.log("!" === "!");
-        console.log(NaN === NaN);
+        /// STRINGS ///
 
-        // Ternary Operator
-        console.log(true ? 1 : 2);
-        console.log(false ? 1 : 2);
+            //  `Down on the sea`
+            //  "Lie ont he ocean"
+            //  'Float on the ocean'
 
-        // Automatic Type Conversion
-        console.log(8 * null); // 0
 
-        var a = "5" - 1;
-        console.log(a); // 4
-        console.log(typeof a); // number
+        //// Page 14
 
-        var b = "5" + 1;
-        console.log(b); // "51"
-        console.log(typeof b); // string
 
-        console.log("five" * 2); // NaN
 
-        console.log(false == 0); // true
 
-        console.log(false === 0); // false
 
-        console.log(null == undefined); // true
-        console.log(null == 0); // false
 
-        // Short-Circuiting og Logical Operators
 
 
 
