--- a/02_Program_Structure/01_13.11.2019.html
+++ b/02_Program_Structure/01_13.11.2019.html
@@ -16,6 +16,12 @@
     <li>Bindings</li>
     <li>Functions</li>
     <li>Control Flow</li>
+    <li>Conditional Execution</li>
+    <li>While and Do loops</li>
+    <li>Indenting Code</li>
+    <li>Breaking Out of a Loop</li>
+    <li>Updating Bindings Succinctly</li>
+    <li>Capitalization</li>
 </ol>
 
 <p><b>A fragment of code that produces a value is called an expression.</b></p>
@@ -54,8 +60,125 @@
 
         /// CONTROL FLOW ///
 
-    let theNumber = Number(prompt("Pick a number"));
-        console.log("Your number is the square root of " + theNumber * theNumber);
+    // let theNumber = Number(prompt("Pick a number"));
+    //     console.log("Your number is the square root of " + theNumber * theNumber);
+
+
+        /// CONDITIONAL EXECUTION ///
+
+    // let theNumber = Number(prompt('Pick a number'));
+    // if (!Number.isNaN(theNumber)) {
+    //     console.log("Your number is the square root of " + theNumber * theNumber);
+    // } else {
+    //     console.log("Sorry, that is not a number.");
+    // }
+
+    // if (1 + 1 == 2) console.log("It's true");
+
+    // let theNumber = Number(prompt("Pick a number"));
+    // if (!Number.isNaN(theNumber)) {
+    //     console.log("Your number is the square root of " + theNumber * theNumber);
+    // } else {
+    //     console.log("Hey. Why you didn't give me a number?");
+    // }
+
+
+    // let num = Number(prompt("Pick a number."));
+    // if (num < 10) {
+    //     console.log("Small");
+    // } else if (num < 100) {
+    //     console.log("Mediun");
+    // } else {
+    //     console.log("Large");
+    // }
+
+
+        /// WHILE AND DO LOOPS ///
+
+    // let number = 0;
+    // while (number <= 12) {
+    //     console.log(number);
+    //     number+=2;
+    // }
+
+    // let result = 1;
+    // let counter = 0;
+    // while (counter < 10) {
+    //     result*=2;
+    //     counter++;
+    // }
+    // console.log(result);
+
+    // let yourName;
+    // do {
+    //     yourName = prompt("Who are you?");
+    // } while (!yourName);
+    // console.log(yourName);
+
+
+        /// INDENTING CODE ///
+
+    // if (false != true) {
+    //     console.log("That makes sense.");
+    //     if (1 < 2) {
+    //         console.log("No surprise there.");
+    //     }
+    // }
+
+    // for (let i = 0; i <= 12; i++) {
+    //     console.log(i);
+    // }
+
+    // let result = 1;
+    // for (let counter = 0; counter < 10; counter++) {
+    //     result *= 2;
+    // }
+    // console.log(result);
+
+
+        /// BREAKING OUT OF THE LOOP ///
+
+    // for (let current = 20; ; current = current + 1) {
+    //     if (current % 7 === 0) {
+    //         console.log(current);
+    //         break;
+    //     }
+    // }
+
+
+        /// UPDATING BINDINGS SUCCINCTLY ///
+
+    // for (let number = 0; number <= 12; number += 2) {
+    //     console.log(number);
+    // }
+
+    // counter++
+    // counter--
+
+
+        /// DISPATCHING ON A VALUE WITH SWITCH ///
+
+    // switch (prompt("What is the weather like?")) {
+    //     case "rainy":
+    //         console.log("Remember to bring an umbrella.");
+    //         break;
+    //     case "sunny":
+    //         console.log("Dress lightly.");
+    //         break;
+    //     case "cloudy":
+    //         console.log("Go outside.");
+    //         break;
+    //     default:
+    //         console.log("Unknown weather type.");
+    //         break;
+    // }
+
+
+        /// CAPITALIZATION ///
+
+
+
+
 
 
 
